# rag-pipeline

./: pyproject.toml
data/vector_store/: chroma.sqlite3
data/vector_store/798e6e36-d12b-4270-8fc6-b5bcc0be7c9c/: index_metadata.pickle
notebook/: document.ipynb
pyfiles/: __init__.py  chunking.py  documents.py  embeddings.py  llm.py  ragretreiver.py  ranking.py  vectorstorage.py
