[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.21",
    "ollama>=0.6.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.2",
    "sentence-transformers>=5.3.0",
]
